--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ description = "Web PKI X.509 Certificate Verification."
 edition = "2021"
 rust-version = "1.60"
 license = "ISC"
-name = "rustls-webpki"
+name = "webpki"
 readme = "README.md"
 repository = "https://github.com/rustls/webpki"
 version = "0.102.0-alpha.0"
