--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ license = "ISC"
 name = "webpki"
 readme = "README.md"
 repository = "https://github.com/rustls/webpki"
-version = "0.102.0-alpha.0"
+version = "0.23"
 
 include = [
     "Cargo.toml",
